Fix article image storage and generation. Add configuration.